syntax = "proto3";

package identra.v1;

import "google/api/annotations.proto";
import "identra/v1/types.proto";

option go_package = "github.com/poly-workshop/identra/gen/go/identra/v1;identra_v1_pb";

service IdentraService {
  // GetJWKS returns the JSON Web Key Set for verifying tokens
  rpc GetJWKS(GetJWKSRequest) returns (GetJWKSResponse) {
    option (google.api.http) = {get: "/.well-known/jwks.json"};
  }
  rpc GetOAuthAuthorizationURL(GetOAuthAuthorizationURLRequest) returns (GetOAuthAuthorizationURLResponse) {
    option (google.api.http) = {get: "/oauth/url"};
  }
  rpc LoginByOAuth(LoginByOAuthRequest) returns (LoginByOAuthResponse) {
    option (google.api.http) = {
      post: "/oauth/login"
      body: "*"
    };
  }
  rpc BindUserByOAuth(BindUserByOAuthRequest) returns (BindUserByOAuthResponse) {
    option (google.api.http) = {
      post: "/oauth/bind"
      body: "*"
    };
  }
  rpc SendLoginEmailCode(SendLoginEmailCodeRequest) returns (SendLoginEmailCodeResponse) {
    option (google.api.http) = {
      post: "/email/code"
      body: "*"
    };
  }
  rpc LoginByEmailCode(LoginByEmailCodeRequest) returns (LoginByEmailCodeResponse) {
    option (google.api.http) = {
      post: "/email/login"
      body: "*"
    };
  }
  rpc LoginByPassword(LoginByPasswordRequest) returns (LoginByPasswordResponse) {
    option (google.api.http) = {
      post: "/password/login"
      body: "*"
    };
  }
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/token/refresh"
      body: "*"
    };
  }

  // GetCurrentUserLoginInfo returns the current user's linked login methods,
  // e.g. bound email and OAuth provider identifiers.
  rpc GetCurrentUserLoginInfo(GetCurrentUserLoginInfoRequest) returns (GetCurrentUserLoginInfoResponse) {
    option (google.api.http) = {
      post: "/me/login-info"
      body: "*"
    };
  }
}
